{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 772,
  "lineage": "4f50eced-13c6-8f45-973f-c14164516e7a",
  "resources": [
    {
      "module": "module.faliover",
      "mode": "managed",
      "type": "aws_instance",
      "name": "disaster-recovery",
      "provider": "module.faliover.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b8b44ec9a8f90422",
            "arn": "arn:aws:ec2:us-east-2:106039313224:instance/i-054aec1ce5bc03ae5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-054aec1ce5bc03ae5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "failover-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06e99ee54d2881b46",
            "private_dns": "ip-10-2-1-92.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.1.92",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0817f0625de43c05c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e00b8150ca728e35",
            "tags": {
              "Name": "Disaster Recovery"
            },
            "tags_all": {
              "Name": "Disaster Recovery"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00e0ca321f71a8979"
            ]
          },
          "dependencies": [
            "module.faliover.aws_key_pair.failover-key-pair",
            "module.faliover.aws_security_group.bastion-allow-ssh",
            "module.faliover.aws_security_group.disaster-recovery-private-ssh",
            "module.faliover.aws_subnet.disaster-recovery-priv-subnet",
            "module.faliover.aws_vpc.disaster-recovery-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.faliover",
      "mode": "managed",
      "type": "aws_instance",
      "name": "disaster-recovery-bastion",
      "provider": "module.faliover.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b8b44ec9a8f90422",
            "arn": "arn:aws:ec2:us-east-2:106039313224:instance/i-073302e8c4ca4aff8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-073302e8c4ca4aff8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "failover-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03190f2373b0917a7",
            "private_dns": "ip-10-2-0-78.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.0.78",
            "public_dns": "ec2-18-118-31-249.us-east-2.compute.amazonaws.com",
            "public_ip": "18.118.31.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fe1b879094586f1b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e669ac3fb19dd960",
            "tags": {
              "Name": "Disaster Recovery Bastion Host"
            },
            "tags_all": {
              "Name": "Disaster Recovery Bastion Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-05db69ea5221eb7b3"
            ]
          },
          "dependencies": [
            "module.faliover.aws_key_pair.failover-key-pair",
            "module.faliover.aws_security_group.bastion-allow-ssh",
            "module.faliover.aws_subnet.disaster-recovery-pub-subnet",
            "module.faliover.aws_vpc.disaster-recovery-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.faliover",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "disaster-recovery-IGW",
      "provider": "module.faliover.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:106039313224:internet-gateway/igw-06b8bb2c09e5485c2",
            "id": "igw-06b8bb2c09e5485c2",
            "owner_id": "106039313224",
            "tags": {
              "Name": "disaster-recovery-IGW"
            },
            "tags_all": {
              "Name": "disaster-recovery-IGW"
            },
            "vpc_id": "vpc-0dd62df2c3058f7d0"
          },
          "dependencies": [
            "module.faliover.aws_vpc.disaster-recovery-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.faliover",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "disaster-recovery-pub-rt",
      "provider": "module.faliover.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:106039313224:route-table/rtb-0148881fd1a7b0bb7",
            "id": "rtb-0148881fd1a7b0bb7",
            "owner_id": "106039313224",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06b8bb2c09e5485c2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "disaster-recovery-pub-rt"
            },
            "tags_all": {
              "Name": "disaster-recovery-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd62df2c3058f7d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.faliover.aws_internet_gateway.disaster-recovery-IGW",
            "module.faliover.aws_vpc.disaster-recovery-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.faliover",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "disaster-recovery-pub-1-a",
      "provider": "module.faliover.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d50cc0e49f51bc4",
            "route_table_id": "rtb-0148881fd1a7b0bb7",
            "subnet_id": "subnet-0e669ac3fb19dd960"
          },
          "dependencies": [
            "module.faliover.aws_internet_gateway.disaster-recovery-IGW",
            "module.faliover.aws_route_table.disaster-recovery-pub-rt",
            "module.faliover.aws_subnet.disaster-recovery-pub-subnet",
            "module.faliover.aws_vpc.disaster-recovery-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.faliover",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-allow-ssh",
      "provider": "module.faliover.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:106039313224:security-group/sg-05db69ea5221eb7b3",
            "description": "Security Group for bastion that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05db69ea5221eb7b3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "bastion-allow-ssh",
            "name_prefix": "",
            "owner_id": "106039313224",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-allow-ssh"
            },
            "tags_all": {
              "Name": "bastion-allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd62df2c3058f7d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.faliover.aws_vpc.disaster-recovery-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.faliover",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "disaster-recovery-private-ssh",
      "provider": "module.faliover.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:106039313224:security-group/sg-00e0ca321f71a8979",
            "description": "Security Group for private that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e0ca321f71a8979",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05db69ea5221eb7b3"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "source-private-ssh",
            "name_prefix": "",
            "owner_id": "106039313224",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "disaster-recovery-private-ssh"
            },
            "tags_all": {
              "Name": "disaster-recovery-private-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd62df2c3058f7d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.faliover.aws_security_group.bastion-allow-ssh",
            "module.faliover.aws_vpc.disaster-recovery-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.faliover",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "disaster-recovery-priv-subnet",
      "provider": "module.faliover.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:106039313224:subnet/subnet-0e00b8150ca728e35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e00b8150ca728e35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "106039313224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "disaster-recovery-priv-subnet"
            },
            "tags_all": {
              "Name": "disaster-recovery-priv-subnet"
            },
            "vpc_id": "vpc-0dd62df2c3058f7d0"
          },
          "dependencies": [
            "module.faliover.aws_vpc.disaster-recovery-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.faliover",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "disaster-recovery-pub-subnet",
      "provider": "module.faliover.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:106039313224:subnet/subnet-0e669ac3fb19dd960",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.2.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e669ac3fb19dd960",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "106039313224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "disaster-recovery-pub-subnet"
            },
            "tags_all": {
              "Name": "disaster-recovery-pub-subnet"
            },
            "vpc_id": "vpc-0dd62df2c3058f7d0"
          },
          "dependencies": [
            "module.faliover.aws_vpc.disaster-recovery-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.faliover",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "disaster-recovery-vpc",
      "provider": "module.faliover.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:106039313224:vpc/vpc-0dd62df2c3058f7d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-08055803f99e3436c",
            "default_route_table_id": "rtb-090b34a80e8bab956",
            "default_security_group_id": "sg-0218817b2397354e4",
            "dhcp_options_id": "dopt-0877b4b8b02e1dc75",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dd62df2c3058f7d0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-090b34a80e8bab956",
            "owner_id": "106039313224",
            "tags": {
              "Name": "disaster-recovery-vpc"
            },
            "tags_all": {
              "Name": "disaster-recovery-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.primary",
      "mode": "managed",
      "type": "aws_instance",
      "name": "source-bastion",
      "provider": "module.primary.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-080e1f13689e07408",
            "arn": "arn:aws:ec2:us-east-1:106039313224:instance/i-01ae2a889f82399aa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01ae2a889f82399aa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "stream-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07678b242e0e09888",
            "private_dns": "ip-10-0-0-123.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.123",
            "public_dns": "ec2-54-196-94-165.compute-1.amazonaws.com",
            "public_ip": "54.196.94.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0163d7eb208e7e6e0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02e63c36f2e3c96b7",
            "tags": {
              "Name": "Source Bastion Host"
            },
            "tags_all": {
              "Name": "Source Bastion Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0fdd9240b69283d66"
            ]
          },
          "dependencies": [
            "module.primary.aws_key_pair.stream-key-pair",
            "module.primary.aws_security_group.bastion-allow-ssh",
            "module.primary.aws_subnet.source-pub-subnet",
            "module.primary.aws_vpc.source-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.primary",
      "mode": "managed",
      "type": "aws_instance",
      "name": "stream",
      "provider": "module.primary.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-080e1f13689e07408",
            "arn": "arn:aws:ec2:us-east-1:106039313224:instance/i-0d129eff45c7b0d24",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d129eff45c7b0d24",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "stream-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eb3e3d0634a216d8",
            "private_dns": "ip-10-0-1-198.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f7906230ba8267f4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03024f052700559c4",
            "tags": {
              "Name": "Stream"
            },
            "tags_all": {
              "Name": "Stream"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09defa5d2c8855065"
            ]
          },
          "dependencies": [
            "module.primary.aws_key_pair.stream-key-pair",
            "module.primary.aws_security_group.bastion-allow-ssh",
            "module.primary.aws_security_group.source-private-ssh",
            "module.primary.aws_subnet.source-priv-subnet",
            "module.primary.aws_vpc.source-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.primary",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "source-IGW",
      "provider": "module.primary.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:106039313224:internet-gateway/igw-0363fb5a365b54bb3",
            "id": "igw-0363fb5a365b54bb3",
            "owner_id": "106039313224",
            "tags": {
              "Name": "source-IGW"
            },
            "tags_all": {
              "Name": "source-IGW"
            },
            "vpc_id": "vpc-06fb07384264ca2ec"
          },
          "dependencies": [
            "module.primary.aws_vpc.source-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.primary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "source-pub-rt",
      "provider": "module.primary.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:106039313224:route-table/rtb-00fe62d524497eacc",
            "id": "rtb-00fe62d524497eacc",
            "owner_id": "106039313224",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0363fb5a365b54bb3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "source-pub-rt"
            },
            "tags_all": {
              "Name": "source-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fb07384264ca2ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.primary.aws_internet_gateway.source-IGW",
            "module.primary.aws_vpc.source-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.primary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "source-pub-1-a",
      "provider": "module.primary.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0615d1a31d57d51eb",
            "route_table_id": "rtb-00fe62d524497eacc",
            "subnet_id": "subnet-02e63c36f2e3c96b7"
          },
          "dependencies": [
            "module.primary.aws_internet_gateway.source-IGW",
            "module.primary.aws_route_table.source-pub-rt",
            "module.primary.aws_subnet.source-pub-subnet",
            "module.primary.aws_vpc.source-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.primary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-allow-ssh",
      "provider": "module.primary.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:106039313224:security-group/sg-0fdd9240b69283d66",
            "description": "Security Group for bastion that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fdd9240b69283d66",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "bastion-allow-ssh",
            "name_prefix": "",
            "owner_id": "106039313224",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-allow-ssh"
            },
            "tags_all": {
              "Name": "bastion-allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fb07384264ca2ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.primary.aws_vpc.source-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.primary",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "source-private-ssh",
      "provider": "module.primary.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:106039313224:security-group/sg-09defa5d2c8855065",
            "description": "Security Group for private that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09defa5d2c8855065",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fdd9240b69283d66"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "source-private-ssh",
            "name_prefix": "",
            "owner_id": "106039313224",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "source-private-ssh"
            },
            "tags_all": {
              "Name": "source-private-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fb07384264ca2ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.primary.aws_security_group.bastion-allow-ssh",
            "module.primary.aws_vpc.source-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.primary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "source-priv-subnet",
      "provider": "module.primary.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:106039313224:subnet/subnet-03024f052700559c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03024f052700559c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "106039313224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "source-priv-subnet"
            },
            "tags_all": {
              "Name": "source-priv-subnet"
            },
            "vpc_id": "vpc-06fb07384264ca2ec"
          },
          "dependencies": [
            "module.primary.aws_vpc.source-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.primary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "source-pub-subnet",
      "provider": "module.primary.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:106039313224:subnet/subnet-02e63c36f2e3c96b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e63c36f2e3c96b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "106039313224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "source-pub-subnet"
            },
            "tags_all": {
              "Name": "source-pub-subnet"
            },
            "vpc_id": "vpc-06fb07384264ca2ec"
          },
          "dependencies": [
            "module.primary.aws_vpc.source-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.primary",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "source-vpc",
      "provider": "module.primary.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:106039313224:vpc/vpc-06fb07384264ca2ec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-035fc46a4fa904386",
            "default_route_table_id": "rtb-093ec0aaaa5b71c58",
            "default_security_group_id": "sg-0204f385805dae0b7",
            "dhcp_options_id": "dopt-00f709920d7371636",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06fb07384264ca2ec",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-093ec0aaaa5b71c58",
            "owner_id": "106039313224",
            "tags": {
              "Name": "source-vpc"
            },
            "tags_all": {
              "Name": "source-vpc"
            }
          }
        }
      ]
    }
  ]
}